[package]
name = "js-reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
deno_ast = "0.36.2"
glob = "0.3.1"
path-absolutize = "3.1.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
vue-sfc = "0.3.2"
log = "0.4.21"
